Fixed overflow hidden to fit content on comments.

--- a/hw2/movie.css
+++ b/hw2/movie.css
@@ -75,6 +75,7 @@ div.commentColumn p.comment {
     padding: 8px;
     font-size: 8pt;
     font-weight: bold;
+    overflow: hidden;
 }
 
 div.commentColumn img {
